--- a/src/main/java/Overview.form
+++ b/src/main/java/Overview.form
@@ -1,46 +1,16 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="Overview">
-  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="2" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="3" column-count="6" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
-      <xy x="20" y="20" width="500" height="400"/>
+      <xy x="20" y="20" width="524" height="400"/>
     </constraints>
     <properties/>
     <border type="none"/>
     <children>
-      <component id="3dfc" class="javax.swing.JButton" binding="addSalesmanButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="140" height="26"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Add Salesman"/>
-        </properties>
-      </component>
-      <component id="8ab9b" class="javax.swing.JButton" binding="removeSalesmanButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
-            <preferred-size width="140" height="26"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Remove Salesman"/>
-        </properties>
-      </component>
-      <component id="cdd09" class="javax.swing.JButton" binding="refreshButton" default-binding="true">
-        <constraints>
-          <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
-            <preferred-size width="140" height="26"/>
-          </grid>
-        </constraints>
-        <properties>
-          <text value="Refresh"/>
-        </properties>
-      </component>
       <scrollpane id="38543">
         <constraints>
-          <grid row="1" column="0" row-span="1" col-span="3" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+          <grid row="1" column="0" row-span="1" col-span="6" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
         </constraints>
         <properties/>
         <border type="none"/>
@@ -51,6 +21,85 @@
           </component>
         </children>
       </scrollpane>
+      <component id="cdd09" class="javax.swing.JButton" binding="refreshButton" default-binding="true">
+        <constraints>
+          <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <preferred-size width="140" height="26"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Refresh"/>
+        </properties>
+      </component>
+      <component id="4173d" class="javax.swing.JTextField" binding="searchBar">
+        <constraints>
+          <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="100" height="26"/>
+            <preferred-size width="180" height="26"/>
+            <maximum-size width="-1" height="26"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="8ab9b" class="javax.swing.JButton" binding="removeSalesmanButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="2" row-span="1" col-span="4" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="140" height="26"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Remove Salesman"/>
+        </properties>
+      </component>
+      <component id="3dfc" class="javax.swing.JButton" binding="addSalesmanButton" default-binding="true">
+        <constraints>
+          <grid row="2" column="0" row-span="1" col-span="2" vsize-policy="3" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false">
+            <preferred-size width="140" height="26"/>
+          </grid>
+        </constraints>
+        <properties>
+          <text value="Add Salesman"/>
+        </properties>
+      </component>
+      <component id="e0ac2" class="javax.swing.JButton" binding="searchButton">
+        <constraints>
+          <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+            <minimum-size width="26" height="26"/>
+            <preferred-size width="26" height="26"/>
+            <maximum-size width="26" height="26"/>
+          </grid>
+        </constraints>
+        <properties>
+          <iconTextGap value="0"/>
+          <label value=""/>
+          <text value=""/>
+        </properties>
+      </component>
+      <component id="5cf98" class="javax.swing.JRadioButton" binding="firstnameRadio">
+        <constraints>
+          <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Firstname"/>
+        </properties>
+      </component>
+      <component id="45ca7" class="javax.swing.JRadioButton" binding="lastnameRadio">
+        <constraints>
+          <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <selected value="true"/>
+          <text value="Lastname"/>
+        </properties>
+      </component>
     </children>
   </grid>
+  <buttonGroups>
+    <group name="searchRadio">
+      <member id="5cf98"/>
+      <member id="45ca7"/>
+    </group>
+  </buttonGroups>
 </form>
