--- a/src/main/java/StaffDetails.form
+++ b/src/main/java/StaffDetails.form
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="StaffDetails">
-  <grid id="27dc6" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="4" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+  <grid id="27dc6" binding="detailsPanel" layout-manager="GridLayoutManager" row-count="5" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
       <xy x="20" y="20" width="311" height="339"/>
@@ -8,21 +8,6 @@
     <properties/>
     <border type="none"/>
     <children>
-      <scrollpane id="4f2f7">
-        <constraints>
-          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
-            <preferred-size width="-1" height="150"/>
-          </grid>
-        </constraints>
-        <properties/>
-        <border type="none" title="Performance Records"/>
-        <children>
-          <component id="d2a0f" class="javax.swing.JTable" binding="recordsTable">
-            <constraints/>
-            <properties/>
-          </component>
-        </children>
-      </scrollpane>
       <component id="e1f16" class="javax.swing.JLabel">
         <constraints>
           <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
@@ -73,6 +58,29 @@
         </constraints>
         <properties>
           <text value="Label"/>
+        </properties>
+      </component>
+      <scrollpane id="4f2f7">
+        <constraints>
+          <grid row="3" column="0" row-span="1" col-span="2" vsize-policy="7" hsize-policy="7" anchor="0" fill="3" indent="0" use-parent-layout="false">
+            <preferred-size width="-1" height="150"/>
+          </grid>
+        </constraints>
+        <properties/>
+        <border type="none" title="Evaluation Records"/>
+        <children>
+          <component id="d2a0f" class="javax.swing.JTable" binding="recordsTable">
+            <constraints/>
+            <properties/>
+          </component>
+        </children>
+      </scrollpane>
+      <component id="dba0a" class="javax.swing.JButton" binding="addRecod">
+        <constraints>
+          <grid row="4" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+        </constraints>
+        <properties>
+          <text value="Add Record"/>
         </properties>
       </component>
     </children>
