--- a/src/main/java/de/hbrs/ia/swing/EvalRecord.form
+++ b/src/main/java/de/hbrs/ia/swing/EvalRecord.form
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="de.hbrs.ai.swing.EvalRecord">
+<form xmlns="http://www.intellij.com/uidesigner/form/" version="1" bind-to-class="de.hbrs.ia.swing.EvalRecord">
   <grid id="27dc6" binding="evalRecordPanel" layout-manager="GridLayoutManager" row-count="4" column-count="4" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="10" left="10" bottom="10" right="10"/>
     <constraints>
